Mon Dec  9 11:14:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_parse.c (parse_time): unset case-insensitive flag
	  for [:alpha:], which already implies both cases, to get rid of
	  backtrack explosion.  [ruby-core:58876] [Bug #9221]

Mon Dec  9 08:40:40 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master bf37240.  Fixes useless
	  error message with `gem install -g` with no gem dependencies file.
	* test/rubygems:  ditto.

Mon Dec  9 04:52:25 2013  Eric Hodel  <drbrain@segment7.net>

	* NEWS:  Update RubyGems entry with notable features.

Mon Dec  9 04:43:54 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/.document:  Add syslog/lib and thread/thread.c to documentable
	  items.  [ruby-trunk - Bug #9228]

Mon Dec  9 04:28:50 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 096db36.  Changes include
	  support for PATH in Gemfile.lock and a typo fix from Akira Matsuda.
	* test/rubygems:  ditto.

Mon Dec  9 02:10:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http/responses.rb:
	  Add `HTTPIMUsed`, as it is also supported by rack/rails.
	  RFC - http://tools.ietf.org/html/rfc3229
	  by Vipul A M <vipulnsward@gmail.com>
	  https://github.com/ruby/ruby/pull/447 fix GH-447

Sun Dec  8 20:47:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_get_kwargs): when values is non-null, remove
	  extracted keywords from the rest keyword argument.

Sun Dec  8 20:26:54 2013  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* common.mk (ruby.imp): avoid circular dependency on AIX

Sun Dec  8 20:21:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* bigdecimal.c (BigDecimal_coerce): convert a Float to a BigDecimal instead
	  of converting the receiver to a Float.  The reason is there are BigDecimal
	  instances with precisions that is smaller than the Float's precision.
	  [ruby-core:58756] [Bug #9192]

	* test/bigdecimal/test_bigdecimal.rb: add tests for the above change.
