@@ -277,6 +277,18 @@ rb_class_path_no_cache(VALUE klass)
     return path;
 }
 
+VALUE
+rb_class_path_cached(VALUE klass)
+{
+    st_table *ivtbl = RCLASS_IV_TBL(klass);
+    st_data_t n;
+
+    if (!ivtbl) return Qnil;
+    if (st_lookup(ivtbl, (st_data_t)classpath, &n)) return (VALUE)n;
+    if (st_lookup(ivtbl, (st_data_t)tmp_classpath, &n)) return (VALUE)n;
+    return Qnil;
+}
+
 void
 rb_set_class_path_string(VALUE klass, VALUE under, VALUE name)
 {
